Added link to arXiv.

--- a/germany.Rmd
+++ b/germany.Rmd
@@ -100,7 +100,7 @@ Neben den hier dargestellten Ergebnissen für Deutschland und seine Bundeslände
 - Zu beachten ist weiterhin, dass das Meldedatum der Fälle aufgrund der Inkubationszeit (ca. 5 Tage [(WHO 2020)](#ref3)) und der Zeit für die Durchführung der Tests sowie der Meldung an die Behörden wesentlich später liegt als das tatsächliche Infektionsdatum. Der Einfachheit halber wird hier von einer Verzögerung von 7 Tagen ausgegangen. Daher wird auch die Schätzung der Reproduktionszahl **um eine Woche zeitversetzt** zu den gemeldeten Fällen angezeigt.
 - Aufgrund der Meldekette vom Gesundheitsamt des Landkreises über die zuständige Landesbehörde an das Robert Koch-Institut werden noch Daten nachgetragen - und zwar für die letzten 3 Tage in nicht zu vernachlässigendem Umfang. Deshalb sind die jeweils **letzten 3 Werte noch nicht vollständig** und werden entsprechend blasser dargestellt.
 - In einer Population, in der keine Gegenmaßnahmen unternommen werden, wird die sogenannte **Basisreproduktionszahl** *R<sub>0</sub>* auf einen Wert zwischen 2,4 und 4,1 geschätzt [(Read et al. 2020)](#ref4). Schätzungen mit höheren Werten könnten durch eine beträchtliche Anzahl von von außen **eingeschleppten Fällen** erklärt werden.
--  **Details** findet man im zugehörigen [Bericht](reports/repronum/repronum.pdf); der **Code** ist [hier](https://github.com/Stochastik-TU-Ilmenau/COVID-19/blob/gh-pages/estimator.r) verfügbar.
+-  **Details** findet man im zugehörigen [Bericht](reports/repronum/repronum.pdf)  [(Hotz et al. 2020)](#ref5); der **Code** ist [hier](https://github.com/Stochastik-TU-Ilmenau/COVID-19/blob/gh-pages/estimator.r) verfügbar.
 
 ### Referenzen
 
@@ -111,6 +111,8 @@ Neben den hier dargestellten Ergebnissen für Deutschland und seine Bundeslände
 <a name="ref3">[3]</a> WHO (2020). Report of the WHO-China Joint Mission on Coronavirus Disease 2019 (COVID-19), [https://www.who.int/publications-detail/report-of-the-who-china-joint-mission-on-coronavirus-disease-2019-(covid-19)](https://www.who.int/publications-detail/report-of-the-who-china-joint-mission-on-coronavirus-disease-2019-(covid-19)).
 
 <a name="ref4">[4]</a>: Read, J.M., Bridgen, J.R.E., Cummings, D.A.T., Ho, A., Jewell, C.P. (2020). *Novel coronavirus 2019-nCoV: early estimation of epidemiological parameters and epidemic predictions.* MedRxiv, Version 2, 01/28/2020, [https://doi.org/10.1101/2020.01.23.20018549](https://doi.org/10.1101/2020.01.23.20018549).
+
+<a name="ref5">[5]</a>: Hotz, T., Glock, M., Heyder, S., Semper, S.,  Böhle, A., Krämer, A. (2020). *Monitoring the spread of COVID-19 by estimating reproduction numbers over time.* [arXiv:2004.08557](https://arxiv.org/abs/2004.08557), 18/04/2020.
 
 <br/>
 *[Impressum](impressum.html)*
